--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build && cp ./resources/js/carousel.min.js ./public/build/assets/carousel.min.js"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
